# ConsoLogger

./: README  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
arduino/: main.ino
src/: consol.py  main.py
src/tests/: test_conso_logger.py  test_main.py
