[tool.poetry]
name = "conso-logger"
version = "1.0.0"
description = "Un outil de diagnostic et d'analyse des consommations électriques"

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.22.0"
numpy = "^2.0"
matplotlib = "^3.4"
filterpy = "^1.4"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
hypothesis = "^6.137.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"